--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="alisson.zanoni.nostroristorante">
 
     <application
+        android:name=".Aplicacao"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -31,5 +32,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
