Adição tela e método de buscar dados do perfil usuário

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NostroRistorante">
         <activity
+            android:name=".PerfilActivity"
+            android:exported="false" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
@@ -31,4 +34,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
